[gd_scene load_steps=6 format=3 uid="uid://b2ac32l5q465y"]

[ext_resource type="Script" uid="uid://c8l31np11m5oh" path="res://scripts/session.gd" id="1_wfdo7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wfdo7"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_wfdo7"]
color = Color(0.192157, 0.345098, 0.109804, 1)
thickness = 2

[sub_resource type="ButtonGroup" id="ButtonGroup_wfdo7"]

[sub_resource type="ButtonGroup" id="ButtonGroup_w6gu6"]

[node name="SessionScrollContainer" type="ScrollContainer"]
custom_minimum_size = Vector2(688, 1260)
offset_right = 704.0
offset_bottom = 1332.0
script = ExtResource("1_wfdo7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(688, 472)
layout_mode = 2
theme_override_constants/separation = 8

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 64
theme_override_styles/separator = SubResource("StyleBoxEmpty_wfdo7")

[node name="SubtitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Add meg az alábbi adatokat!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator5" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 64
theme_override_styles/separator = SubResource("StyleBoxEmpty_wfdo7")

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Erdőbirtokosság:"

[node name="CompanyLineEdit" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_bottom = NodePath("../CityLineEdit")
focus_next = NodePath("../CityLineEdit")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxLine_wfdo7")

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Helység:"

[node name="CityLineEdit" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_top = NodePath("../CompanyLineEdit")
focus_neighbor_bottom = NodePath("../SiteLineEdit")
focus_next = NodePath("../SiteLineEdit")
focus_previous = NodePath("../CompanyLineEdit")

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Rakodóhely:"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxLine_wfdo7")

[node name="SiteLineEdit" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_top = NodePath("../CityLineEdit")
focus_neighbor_bottom = NodePath("../PersonLineEdit")
focus_next = NodePath("../PersonLineEdit")

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxLine_wfdo7")

[node name="Label4" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Köböző személy:"

[node name="PersonLineEdit" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_top = NodePath("../SiteLineEdit")
focus_previous = NodePath("../SiteLineEdit")

[node name="HSeparator6" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxLine_wfdo7")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
text = "Rönk-felirat pontossága:"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(182, 96)
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_wfdo7")
text = "század"

[node name="CheckBox2" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(182, 96)
layout_mode = 2
button_group = SubResource("ButtonGroup_wfdo7")
text = "ezred"

[node name="HSeparator7" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxLine_wfdo7")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
text = "Számítás pontossága:"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(182, 96)
layout_mode = 2
button_group = SubResource("ButtonGroup_w6gu6")
text = "század"

[node name="CheckBox2" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(182, 96)
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_w6gu6")
text = "ezred
"

[connection signal="text_changed" from="VBoxContainer/CompanyLineEdit" to="." method="_on_company_line_edit_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/CompanyLineEdit" to="." method="_on_company_line_edit_text_submitted"]
[connection signal="text_changed" from="VBoxContainer/CityLineEdit" to="." method="_on_city_line_edit_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/CityLineEdit" to="." method="_on_city_line_edit_text_submitted"]
[connection signal="text_changed" from="VBoxContainer/SiteLineEdit" to="." method="_on_site_line_edit_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/SiteLineEdit" to="." method="_on_site_line_edit_text_submitted"]
[connection signal="text_changed" from="VBoxContainer/PersonLineEdit" to="." method="_on_person_line_edit_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/PersonLineEdit" to="." method="_on_person_line_edit_text_submitted"]
